src/objects/Comment__c.object
<CustomObject>
    <fields>
        <fullName>Bug_Tracking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bug Tracking</label>
        <referenceTo>Change_Control_and_Bug_Tracking__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Posted__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Posted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>Com-{00000}</displayFormat>
        <label>Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>